--- a/css/ideagrid.css
+++ b/css/ideagrid.css
@@ -1,7 +1,7 @@
 /*
 *
-* idea Grid v 0.1
-* Copyright 2016 Adriano Giannacco, Ideidea Srl
+* Ideagrid v 0.2
+* Copyright 2016 Adriano Giannacco, Idearia Srl
 *
 */
 
